Removed Lorem Ipsum

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 class="header">Online TicTacToe!</h1>
 
         <div class="main">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit temporibus vel sint ullam quibusdam soluta repellendus dicta deserunt nam placeat nisi doloremque libero, adipisci quae id voluptatum amet similique porro? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto omnis laudantium obcaecati tempore illo hic suscipit? Accusamus aut, eaque excepturi aliquid ipsam consectetur ut optio sit vitae natus beatae mollitia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo aperiam quae, sunt eligendi, quasi nesciunt maiores dicta nulla vel magni culpa aut voluptas, facilis adipisci perferendis ratione harum ad cupiditate.</p>
+            <p>Hello World</p>
         
         </div>
 
