--- a/index.html
+++ b/index.html
@@ -13,22 +13,23 @@
 
     <h1 class="header">Online TicTacToe!</h1>
     <div class="game">
+
         <div class="players"> <!--x, o, reset, and spectator-->
-            <button id="btnX">Player 1</button>
+            <button id="btnX" style="color:red">Player 1</button>
             <button id="btnR">Reset</button>
-            <button id="btnO">Player 2</button>
+            <button id="btnO" style="color:blue">Player 2</button>
         </div>
 
         <div class="game-window">
-            <button id="btn1">X</button>
-            <button id="btn2">O</button>
-            <button id="btn3">O</button>
-            <button id="btn4">X</button>
-            <button id="btn5">O</button>
-            <button id="btn6">X</button>
-            <button id="btn7">O</button>
-            <button id="btn8">O</button>
-            <button id="btn9">X</button>
+            <button id="btn1"></button>
+            <button id="btn2"></button>
+            <button id="btn3"></button>
+            <button id="btn4"></button>
+            <button id="btn5"></button>
+            <button id="btn6"></button>
+            <button id="btn7"></button>
+            <button id="btn8"></button>
+            <button id="btn9"></button>
         </div>
     </div>
     <!--actual game goes here, not too sure how to do that-->
